--- a/css/style.css
+++ b/css/style.css
@@ -98,7 +98,7 @@ hr {
 }
 #menu .phone {
 	font-family: 'Montserrat', sans-serif;
-	margin: 4px 0 0 120px;
+	margin: 4px 0 0 75px;
 	float: left;
 	font-size: 16px;
 	font-weight: 400;
@@ -169,7 +169,7 @@ a:focus, .btn:focus, .btn:active:focus, .btn.active:focus, .btn.focus, .btn:acti
 	display: table;
 	width: 100%;
 	padding: 0;
-	background: url(../img/intro-bg.jpg) center center no-repeat;
+	background: url(../img/uploads/home-bg.jpeg) center center no-repeat;
 	background-color: #e5e5e5;
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
