--- a/css/style.css
+++ b/css/style.css
@@ -232,7 +232,7 @@ header .intro-text {
 }
 /* About Section */
 #about {
-	padding: 110px 0;
+	padding: 75px 0;
 	background: #f6f6f6;
 }
 #about h3 {
@@ -250,7 +250,7 @@ header .intro-text {
 	content: "";
 	background-color: #e52f3c;
 	height: 3px;
-	width: 50px;
+	width: 0px;
 	bottom: -1px;
 	left: 0;
 }
@@ -268,7 +268,7 @@ header .intro-text {
 	font-weight: 300;
 	padding-right: 8px;
 }
-#about img {
+#about-img {
 	padding: 20px;
 	width: 500px;
 	margin-top: 10px;
@@ -522,7 +522,6 @@ color: #777;
 	margin: 50px 0;
 }
 }
-
 
 
 /*CUSTOM LOADER*/
