--- a/css/style.css
+++ b/css/style.css
@@ -373,7 +373,7 @@ header .intro-text {
 }
 /* Testimonials Section */
 #testimonials {
-	padding: 100px 0;
+	padding: 0 0;
 }
 #testimonials i {
 	color: #e6e6e6;
