--- a/css/style.css
+++ b/css/style.css
@@ -247,7 +247,7 @@ header .intro-text {
 }
 /* About Section */
 #about {
-	padding: 75px 0;
+	padding: 50px 0 50px 0;
 	background: #f6f6f6;
 }
 #about h3 {
@@ -329,7 +329,7 @@ header .intro-text {
 }
 /* Portfolio Section */
 #portfolio {
-	padding: 100px 0;
+	padding: 50px 0;
 	background: #f6f6f6;
 }
 .portfolio-item {
@@ -373,7 +373,7 @@ header .intro-text {
 }
 /* Testimonials Section */
 #testimonials {
-	padding: 0 0;
+	padding: 50px 0 0 0;
 }
 #testimonials i {
 	color: #e6e6e6;
@@ -417,7 +417,7 @@ header .intro-text {
 }
 /* Contact Section */
 #contact {
-	padding: 100px 0 60px 0;
+	padding: 50px 0 25px 0;
 	background: white;
 	color: #000;
 }
@@ -656,3 +656,9 @@ color: #777;
 	  stroke-dashoffset: -136px;
 	}
   }
+/*Custom CSS*/
+#epyk {
+	padding: 10px 0 0px 0;
+	background: white;
+	color: #000;
+}
